# gamp

./: .cvsignore  .tm_project.cache  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  gamp.desktop.in  gamp.glade  gamp.gladep  gamp.prj  gamp.pws  open-location.glade
autom4te.cache/: output.0  requests  traces.0
data/: .cvsignore  Makefile.am  Makefile.in  gamp.applications  gamp.desktop.in  gamp.glade  gamp.glade.in  gamp.keys  open-location.glade
help/: Makefile.am
help/C/: Makefile.am  gamp-C.omf  gamp.xml  legal.xml
include/: GAPPlayer.h  Makefile.am  Makefile.in  main.h
macros/: Makefile.in
pixmaps/: Makefile.am  Makefile.in
po/: .cvsignore  ChangeLog  Makevars  POTFILES.in
src/: .cvsignore  GAPPlayer.c  GAPPlayer.h  Makefile.am  Makefile.in  gap-metadata.c  gap-metadata.h  gui-callbacks (copy).c  gui-callbacks.c  main.c  main.h  playlist-gui.c  playlist.c  playlist.h
