SUBDIRS = src pixmaps po data


gladedir = $(pkgdatadir)
glade_DATA = gamp.glade open-location.glade
 
EXTRA_DIST = \
	AUTHORS					\
	MAINTAINERS				\
	NEWS					\
	README					\
	intltool-merge.in		\
	intltool-update.in		\
	intltool-extract.in		\
	omf.make				\
	xmldocs.make			\
	$(glade_DATA)
	
DISTCLEANFILES = \
	po/.intltool-merge-cache	\
	intltool-extract			\
	intltool-merge				\
	intltool-update


