SUBDIRS = src pixmaps data help po

EXTRA_DIST = \
	AUTHORS					\
	MAINTAINERS				\
	NEWS					\
	README					\
	intltool-merge.in		\
	intltool-update.in		\
	intltool-extract.in		\
	omf.make				\
	xmldocs.make
	
DISTCLEANFILES = \
	po/.intltool-merge-cache	\
	intltool-extract			\
	intltool-merge				\
	intltool-update


