## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gamp_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

gamp_pixmaps_DATA = \
	gamp_icon.png\
	gamp-next.png\
	gamp-pause.png\
	gamp-play.png\
	gamp-previous.png\
	gamp-repeat.png\
	gamp-shuffle.png\
	gamp-stop.png\
	gamp-volume.png\
	gamp-playlist.png

EXTRA_DIST = $(gamp_pixmaps_DATA)
