icondir = $(datadir)/pixmaps
icon_DATA = gamp.png

gamp_pixmapsdir = $(pkgdatadir)/pixmaps
gamp_pixmaps_DATA = \
	gamp-eject.png \
	gamp-next.png \
	gamp-pause.png \
	gamp-play.png \
	gamp-previous.png \
	gamp-repeat.png \
	gamp-shuffle.png \
	gamp-stop.png \
	gamp-volume.png \
	gamp-playlist.png \
	gamp.png

EXTRA_DIST = \
	$(gamp_pixmaps_DATA) \
	$(icon_DATA)

