## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(GNOME_CFLAGS)

gamp_CFLAGS =\
	 -Wall\
	 -O1\
	 -g

bin_PROGRAMS = gamp

gamp_SOURCES = \
	main.c\
	gui-callbacks.c\
	GAPPlayer.c\
	GAPPlayer.h\
	main.h\
	playlist.c\
	playlist.h

gamp_LDFLAGS = 

gamp_LDADD =  \
	$(GNOME_LIBS)

